Add Blur background image.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <img src="./images/leafs.jpg" alt="background-image" />
     <header>
       <section class="header">
         <h1>Tasks</h1>
