Make app window size fixed. Add README.md file. Add an output image. Rename the background image.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <img src="./images/leafs.jpg" alt="background-image" />
+    <img src="./images/background.jpg" alt="background-image" />
     <header>
       <section class="header">
         <h1>Tasks</h1>
