Add animation to all tasks when a new task created. Add animation to tasks when scrollbar is at end of page. Replace whole fs module with only two needed fs functions in main.js. Optimize removing task functionality by passing the element itself instead of id.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <article>
-      <section class="content"></section>
+      <section id="content"></section>
     </article>
 
     <footer>
@@ -23,7 +23,6 @@
         </form>
       </section>
     </footer>
-
     <script src="./renderer.js"></script>
   </body>
 </html>
